# stm32g474_foc

./: .gitignore  .mxproject  CMakeLists.txt  stm32g474_foc.ioc
Core/Inc/: fdcan.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
Drivers/stm32/include/: board_support.hpp  interface_test.hpp  system.h  uart_dma_tx.hpp
Drivers/stm32/src/: adc_test.cpp  board_support.cpp  can_test.cpp  encoder_test.cpp  uart_dma_tx.cpp
USB_Device/App/: usbd_cdc_if.h  usbd_desc.c
motor_control/: README.md
motor_control/include/: component.hpp  fast_math.h  foc.hpp  interfaces.hpp  low_level.hpp  phase_control_law.hpp  test_m.hpp  timer.hpp  utils.hpp
motor_control/src/: fast_math.c  foc.cpp  low_level.cpp  main.cpp  phase_control_law.cpp  test_m.cpp
